--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-matplotlib==3.1.0
+matplotlib===3.8.0
 torchvision==0.2.1
-numpy==1.14.5
-torch==0.4.0
+numpy===1.23.5
+torch==2.2.0
 scikit_plot==0.3.7
-scikit_learn==0.21.3
+scikit_learn==1.1.0
+
+
+#pip install matplotlib==3.8.4 numpy==1.23.0 torch==2.2.1 scikit_plot==0.3.7 scikit-learn==1.1.0
